Add config file for file path

--- a/src/00_collect_data/meteo_api_data_collection.ipynb
+++ b/src/00_collect_data/meteo_api_data_collection.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,15 @@
     "import numpy as np\n",
     "\n",
     "from datetime import datetime, timedelta\n",
-    "from meteostat import Point, Daily, Hourly, Stations"
+    "from meteostat import Point, Daily, Hourly, Stations\n",
+    "\n",
+    "# importing sys\n",
+    "import sys\n",
+    "\n",
+    "# adding Config file\n",
+    "sys.path.insert(0, \"../config/\")\n",
+    "\n",
+    "from config import Config\n"
    ]
   },
   {
@@ -328,7 +336,7 @@
    "outputs": [],
    "source": [
     "# Store result\n",
-    "meteo_res_df.to_csv('../../data/raw/meteo_weather.csv', index=False)"
+    "meteo_res_df.to_csv(Config.get_raw_meteorology_path(\"meteo_weather\"), index=False)\n"
    ]
   }
  ],
