--- a/src/00_collect_data/nasa_api_data_collection.ipynb
+++ b/src/00_collect_data/nasa_api_data_collection.ipynb
@@ -47,7 +47,15 @@
     "import re\n",
     "import io\n",
     "\n",
-    "from datetime import timedelta"
+    "from datetime import timedelta\n",
+    "\n",
+    "# importing sys\n",
+    "import sys\n",
+    " \n",
+    "# adding Config file\n",
+    "sys.path.insert(0, '../config/')\n",
+    "\n",
+    "from config import Config"
    ]
   },
   {
@@ -177,7 +185,7 @@
    "outputs": [],
    "source": [
     "# Store weather data to folder\n",
-    "nasa_df.to_csv(\"../../data/raw/meteorology_nasa_weather.csv\", index=False)\n"
+    "nasa_df.to_csv(Config.get_raw_meteorology_path(\"nasa_weather\"), index=False)\n"
    ]
   },
   {
@@ -424,7 +432,7 @@
    "outputs": [],
    "source": [
     "# Store weather for big fire\n",
-    "nasa_big_fire_df.to_csv(\"../../data/raw/meteorology_nasa_weather_extra.csv\", index=False)\n"
+    "nasa_big_fire_df.to_csv(Config.get_raw_meteorology_path(\"nasa_weather_extra\"), index=False)\n"
    ]
   },
   {
@@ -471,7 +479,9 @@
    "outputs": [],
    "source": [
     "# Store result into data folder\n",
-    "nasa_last_180_prec_df.to_csv(\"../../data/raw/meteorology_nasa_weather_last_180days.csv\", index=False)"
+    "nasa_last_180_prec_df.to_csv(\n",
+    "    Config.get_raw_meteorology_path(\"nasa_weather_last_180days\"), index=False\n",
+    ")\n"
    ]
   }
  ],
