most final modeling done

--- a/src/00_collect_data/wildfire_data.ipynb
+++ b/src/00_collect_data/wildfire_data.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,17 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jeffr\\AppData\\Local\\Temp\\ipykernel_4068\\405798385.py:1: DtypeWarning: Columns (14,16,20,21,23,32,46,55,61,77,78,94,95) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv('../../data/raw/WFIGS_-_Wildland_Fire_Locations_Full_History (3).csv')\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -251,19 +243,19 @@
        "[5 rows x 96 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('../../data/raw/WFIGS_-_Wildland_Fire_Locations_Full_History (3).csv')\n",
+    "df = pd.read_csv('../../data/raw/WFIGS_-_Wildland_Fire_Locations_Full_History (3).csv', low_memory = False)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +264,7 @@
        "(33564, 96)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,230 +275,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X\n",
-      "Y\n",
-      "OBJECTID\n",
-      "ABCDMisc\n",
-      "ADSPermissionState\n",
-      "CalculatedAcres\n",
-      "ContainmentDateTime\n",
-      "ControlDateTime\n",
-      "DailyAcres\n",
-      "DiscoveryAcres\n",
-      "DispatchCenterID\n",
-      "EstimatedCostToDate\n",
-      "FinalFireReportApprovedByTitle\n",
-      "FinalFireReportApprovedByUnit\n",
-      "FinalFireReportApprovedDate\n",
-      "FireBehaviorGeneral\n",
-      "FireBehaviorGeneral1\n",
-      "FireBehaviorGeneral2\n",
-      "FireBehaviorGeneral3\n",
-      "FireCause\n",
-      "FireCauseGeneral\n",
-      "FireCauseSpecific\n",
-      "FireCode\n",
-      "FireDepartmentID\n",
-      "FireDiscoveryDateTime\n",
-      "FireMgmtComplexity\n",
-      "FireOutDateTime\n",
-      "FireStrategyConfinePercent\n",
-      "FireStrategyFullSuppPercent\n",
-      "FireStrategyMonitorPercent\n",
-      "FireStrategyPointZonePercent\n",
-      "FSJobCode\n",
-      "FSOverrideCode\n",
-      "GACC\n",
-      "ICS209ReportDateTime\n",
-      "ICS209ReportForTimePeriodFrom\n",
-      "ICS209ReportForTimePeriodTo\n",
-      "ICS209ReportStatus\n",
-      "IncidentManagementOrganization\n",
-      "IncidentName\n",
-      "IncidentShortDescription\n",
-      "IncidentTypeCategory\n",
-      "IncidentTypeKind\n",
-      "InitialLatitude\n",
-      "InitialLongitude\n",
-      "InitialResponseAcres\n",
-      "InitialResponseDateTime\n",
-      "IrwinID\n",
-      "IsFireCauseInvestigated\n",
-      "IsFireCodeRequested\n",
-      "IsFSAssisted\n",
-      "IsMultiJurisdictional\n",
-      "IsReimbursable\n",
-      "IsTrespass\n",
-      "IsUnifiedCommand\n",
-      "LocalIncidentIdentifier\n",
-      "PercentContained\n",
-      "PercentPerimeterToBeContained\n",
-      "POOCity\n",
-      "POOCounty\n",
-      "POODispatchCenterID\n",
-      "POOFips\n",
-      "POOJurisdictionalAgency\n",
-      "POOJurisdictionalUnit\n",
-      "POOJurisdictionalUnitParentUnit\n",
-      "POOLandownerCategory\n",
-      "POOLandownerKind\n",
-      "POOLegalDescPrincipalMeridian\n",
-      "POOLegalDescQtr\n",
-      "POOLegalDescQtrQtr\n",
-      "POOLegalDescRange\n",
-      "POOLegalDescSection\n",
-      "POOLegalDescTownship\n",
-      "POOPredictiveServiceAreaID\n",
-      "POOProtectingAgency\n",
-      "POOProtectingUnit\n",
-      "POOState\n",
-      "PredominantFuelGroup\n",
-      "PredominantFuelModel\n",
-      "PrimaryFuelModel\n",
-      "SecondaryFuelModel\n",
-      "TotalIncidentPersonnel\n",
-      "UniqueFireIdentifier\n",
-      "WFDSSDecisionStatus\n",
-      "CreatedBySystem\n",
-      "ModifiedBySystem\n",
-      "IsDispatchComplete\n",
-      "OrganizationalAssessment\n",
-      "StrategicDecisionPublishDate\n",
-      "CreatedOnDateTime_dt\n",
-      "ModifiedOnDateTime_dt\n",
-      "Source\n",
-      "GlobalID\n",
-      "IsCpxChild\n",
-      "CpxName\n",
-      "CpxID\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 33564 entries, 0 to 33563\n",
+      "Data columns (total 97 columns):\n",
+      " #   Column                           Non-Null Count  Dtype  \n",
+      "---  ------                           --------------  -----  \n",
+      " 0   X                                33564 non-null  float64\n",
+      " 1   Y                                33564 non-null  float64\n",
+      " 2   OBJECTID                         33564 non-null  int64  \n",
+      " 3   ABCDMisc                         4181 non-null   object \n",
+      " 4   ADSPermissionState               33564 non-null  object \n",
+      " 5   CalculatedAcres                  967 non-null    float64\n",
+      " 6   ContainmentDateTime              33113 non-null  object \n",
+      " 7   ControlDateTime                  33564 non-null  object \n",
+      " 8   DailyAcres                       33139 non-null  float64\n",
+      " 9   DiscoveryAcres                   32900 non-null  float64\n",
+      " 10  DispatchCenterID                 33380 non-null  object \n",
+      " 11  EstimatedCostToDate              1167 non-null   float64\n",
+      " 12  FinalFireReportApprovedByTitle   0 non-null      float64\n",
+      " 13  FinalFireReportApprovedByUnit    0 non-null      float64\n",
+      " 14  FinalFireReportApprovedDate      10925 non-null  object \n",
+      " 15  FireBehaviorGeneral              1163 non-null   object \n",
+      " 16  FireBehaviorGeneral1             1045 non-null   object \n",
+      " 17  FireBehaviorGeneral2             1003 non-null   object \n",
+      " 18  FireBehaviorGeneral3             781 non-null    object \n",
+      " 19  FireCause                        33515 non-null  object \n",
+      " 20  FireCauseGeneral                 12635 non-null  object \n",
+      " 21  FireCauseSpecific                2600 non-null   object \n",
+      " 22  FireCode                         23976 non-null  object \n",
+      " 23  FireDepartmentID                 75 non-null     object \n",
+      " 24  FireDiscoveryDateTime            33564 non-null  object \n",
+      " 25  FireMgmtComplexity               1235 non-null   object \n",
+      " 26  FireOutDateTime                  29335 non-null  object \n",
+      " 27  FireStrategyConfinePercent       1163 non-null   float64\n",
+      " 28  FireStrategyFullSuppPercent      1163 non-null   float64\n",
+      " 29  FireStrategyMonitorPercent       1163 non-null   float64\n",
+      " 30  FireStrategyPointZonePercent     1163 non-null   float64\n",
+      " 31  FSJobCode                        19375 non-null  object \n",
+      " 32  FSOverrideCode                   18786 non-null  object \n",
+      " 33  GACC                             33562 non-null  object \n",
+      " 34  ICS209ReportDateTime             1153 non-null   object \n",
+      " 35  ICS209ReportForTimePeriodFrom    1163 non-null   object \n",
+      " 36  ICS209ReportForTimePeriodTo      1163 non-null   object \n",
+      " 37  ICS209ReportStatus               1163 non-null   object \n",
+      " 38  IncidentManagementOrganization   1163 non-null   object \n",
+      " 39  IncidentName                     33564 non-null  object \n",
+      " 40  IncidentShortDescription         1163 non-null   object \n",
+      " 41  IncidentTypeCategory             33564 non-null  object \n",
+      " 42  IncidentTypeKind                 33564 non-null  object \n",
+      " 43  InitialLatitude                  32396 non-null  float64\n",
+      " 44  InitialLongitude                 32396 non-null  float64\n",
+      " 45  InitialResponseAcres             20630 non-null  float64\n",
+      " 46  InitialResponseDateTime          10648 non-null  object \n",
+      " 47  IrwinID                          33564 non-null  object \n",
+      " 48  IsFireCauseInvestigated          2217 non-null   float64\n",
+      " 49  IsFireCodeRequested              33564 non-null  int64  \n",
+      " 50  IsFSAssisted                     32090 non-null  float64\n",
+      " 51  IsMultiJurisdictional            31582 non-null  float64\n",
+      " 52  IsReimbursable                   31582 non-null  float64\n",
+      " 53  IsTrespass                       31602 non-null  float64\n",
+      " 54  IsUnifiedCommand                 653 non-null    float64\n",
+      " 55  LocalIncidentIdentifier          33564 non-null  object \n",
+      " 56  PercentContained                 1178 non-null   float64\n",
+      " 57  PercentPerimeterToBeContained    1179 non-null   float64\n",
+      " 58  POOCity                          599 non-null    object \n",
+      " 59  POOCounty                        33564 non-null  object \n",
+      " 60  POODispatchCenterID              33561 non-null  object \n",
+      " 61  POOFips                          33564 non-null  object \n",
+      " 62  POOJurisdictionalAgency          25543 non-null  object \n",
+      " 63  POOJurisdictionalUnit            26008 non-null  object \n",
+      " 64  POOJurisdictionalUnitParentUnit  0 non-null      float64\n",
+      " 65  POOLandownerCategory             29936 non-null  object \n",
+      " 66  POOLandownerKind                 29909 non-null  object \n",
+      " 67  POOLegalDescPrincipalMeridian    180 non-null    object \n",
+      " 68  POOLegalDescQtr                  63 non-null     object \n",
+      " 69  POOLegalDescQtrQtr               56 non-null     object \n",
+      " 70  POOLegalDescRange                169 non-null    object \n",
+      " 71  POOLegalDescSection              169 non-null    float64\n",
+      " 72  POOLegalDescTownship             169 non-null    object \n",
+      " 73  POOPredictiveServiceAreaID       33559 non-null  object \n",
+      " 74  POOProtectingAgency              32959 non-null  object \n",
+      " 75  POOProtectingUnit                33564 non-null  object \n",
+      " 76  POOState                         33564 non-null  object \n",
+      " 77  PredominantFuelGroup             11291 non-null  object \n",
+      " 78  PredominantFuelModel             11258 non-null  object \n",
+      " 79  PrimaryFuelModel                 1163 non-null   object \n",
+      " 80  SecondaryFuelModel               1001 non-null   object \n",
+      " 81  TotalIncidentPersonnel           1124 non-null   float64\n",
+      " 82  UniqueFireIdentifier             33564 non-null  object \n",
+      " 83  WFDSSDecisionStatus              33563 non-null  object \n",
+      " 84  CreatedBySystem                  33564 non-null  object \n",
+      " 85  ModifiedBySystem                 33564 non-null  object \n",
+      " 86  IsDispatchComplete               33564 non-null  int64  \n",
+      " 87  OrganizationalAssessment         711 non-null    object \n",
+      " 88  StrategicDecisionPublishDate     667 non-null    object \n",
+      " 89  CreatedOnDateTime_dt             33564 non-null  object \n",
+      " 90  ModifiedOnDateTime_dt            33564 non-null  object \n",
+      " 91  Source                           33564 non-null  object \n",
+      " 92  GlobalID                         33564 non-null  object \n",
+      " 93  IsCpxChild                       10180 non-null  float64\n",
+      " 94  CpxName                          56 non-null     object \n",
+      " 95  CpxID                            56 non-null     object \n",
+      " 96  id                               33564 non-null  int64  \n",
+      "dtypes: float64(27), int64(4), object(66)\n",
+      "memory usage: 24.8+ MB\n"
      ]
     }
    ],
    "source": [
-    "for i in df.columns:\n",
-    "    print(i)"
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "WF    33497\n",
-       "RX       67\n",
-       "Name: IncidentTypeCategory, dtype: int64"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Ensuring that the Incident Type is a true \"Wildfire\" and not \"Prescribed Fire\" or \"Incident Complex\"\n",
-    "df['IncidentTypeCategory'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[df['IncidentTypeCategory'] == 'WF']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False    29607\n",
-       "True      3890\n",
-       "Name: InitialResponseAcres, dtype: int64"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# The investigation is based on the initial reporting, so not going to take into account how many additional acres burned between initial reporting\n",
-    "    # and human intervention. (Although there's clearly a potential for helping a different model in this data)\n",
+    "# removing some columns that we do not need and ones that have mostly missing values\n",
+    "cols = ['FireBehaviorGeneral', 'FireBehaviorGeneral1', 'FireBehaviorGeneral2', 'FireBehaviorGeneral3', 'FireDepartmentID', 'FireStrategyConfinePercent', 'FireStrategyFullSuppPercent', \n",
+    "        'FireStrategyMonitorPercent', 'FireStrategyPointZonePercent', 'FSJobCode', 'FSOverrideCode', 'GACC', 'ICS209ReportDateTime', 'ICS209ReportForTimePeriodFrom', \n",
+    "        'ICS209ReportForTimePeriodTo', 'ICS209ReportStatus', 'IncidentManagementOrganization', 'WFDSSDecisionStatus', 'CreatedBySystem', 'ModifiedBySystem', 'IsDispatchComplete', \n",
+    "        'OrganizationalAssessment', 'StrategicDecisionPublishDate', 'CreatedOnDateTime_dt', 'ModifiedOnDateTime_dt', 'Source', 'GlobalID', 'IsCpxChild', 'CpxName', 'CpxID', \n",
+    "        'POOFips', 'POOJurisdictionalAgency', 'POOJurisdictionalUnit', 'POOJurisdictionalUnitParentUnit', 'POOLandownerCategory', 'POOLandownerKind', 'POOLegalDescPrincipalMeridian', \n",
+    "        'POOLegalDescQtr', 'POOLegalDescQtrQtr', 'POOLegalDescRange', 'POOLegalDescSection', 'POOLegalDescTownship', 'POOPredictiveServiceAreaID', 'POOProtectingAgency', 'POOProtectingUnit']\n",
     "\n",
-    "(df['InitialResponseAcres']>1.0).value_counts()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Using these columns, specifically the initial longitude and latitude to call meteorlogical data at the disovery datatime, this investigation will hopfully be able to create a model to predict the target (dailyacres - which actually stands for total acres burned after discovery)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cols = ['ContainmentDateTime', 'ControlDateTime', 'DailyAcres', 'DiscoveryAcres', 'FireCause', 'FireDiscoveryDateTime', \n",
-    "        'FireOutDateTime', 'IncidentTypeKind', 'InitialLatitude', 'InitialLongitude', 'POOState']\n",
-    "\n",
-    "df = df[cols]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Looking at fires since start of 2020"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['FireDiscoveryDateTime'] = pd.to_datetime(df['FireDiscoveryDateTime'])\n",
-    "df = df[df['FireDiscoveryDateTime']>='2020-01-01']\n",
-    "df.sort_values('FireDiscoveryDateTime')\n",
-    "df.reset_index(drop = True, inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(22799, 11)"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
+    "df = df.drop(columns = cols)"
    ]
   },
   {
@@ -518,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,19 +428,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('../../data/processed/initial_wildfire.csv', index=False)"
+    "df.to_csv('../../data/raw/initial_wildfire.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
