--- a/src/01_cleaning_eda/bt_eda.ipynb
+++ b/src/01_cleaning_eda/bt_eda.ipynb
@@ -275,6 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#creating helper function that.....\n",
     "def extract_dates(df):\n",
     "    \"\"\"Generates separate columns for each datetime columns from original dataframe\n",
     "\n",
@@ -399,6 +400,7 @@
     }
    ],
    "source": [
+    "# applying helper function to all_fire_weather dataframe\n",
     "extract_dates(all_fire_weather)\n",
     "all_fire_weather.head(1)\n"
    ]
