--- a/src/02_processing/ms_merging_data.ipynb
+++ b/src/02_processing/ms_merging_data.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "84a7fae8-5922-4cc2-acb1-946ff80ce7c8",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "id": "3b365101-aec3-48d4-af80-375dc07cb0f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(21517, 21)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wildfires.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "24c4f9e1-6056-4037-b48d-2b8b1f1a6b3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(21519, 2)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "landcover.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bbabe27a-a22f-4f61-a5b7-216f6a49db43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2128, 4)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "historical_precip.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1261b8e6-c254-43a1-98af-850276591aed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(21518, 37)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15bfa7bd-abda-4d6c-8d06-fe282fbe062e",
+   "metadata": {},
+   "source": [
+    "Master Dataset for Filtered Data (Fires > 1 Acre and lasting longer than 24 hours)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "1707fa96-0acd-4a0f-9587-fd30ef8b640b",
    "metadata": {},
    "outputs": [],
@@ -48,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "278203b1-a4b3-4438-bf7b-8eb1825367e4",
    "metadata": {},
    "outputs": [],
@@ -59,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "58319157-5d7e-42c7-af1e-a937d453c608",
    "metadata": {},
    "outputs": [],
@@ -70,18 +162,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "id": "8b228fce-133c-4c8a-bb7e-a79275de665c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Filtering out columns not participating in fire acreage prediction\n",
-    "master_dataset = data2.drop(columns = ['UniqueFireIdentifier', 'X', 'Y', 'ContainmentDateTime', 'ControlDateTime', 'DailyAcres', 'FireCause', 'FireDiscoveryDateTime',\n",
+    "cols = ['UniqueFireIdentifier', 'X', 'Y', 'ContainmentDateTime', 'ControlDateTime', 'DailyAcres', 'FireCause', 'FireDiscoveryDateTime',\n",
     "                      'IncidentTypeCategory', 'IncidentTypeKind', 'InitialLatitude', 'InitialLongitude','IrwinID','LocalIncidentIdentifier','POOCounty',\n",
     "                      'POODispatchCenterID','POOFips','POOState','fire_id_x','x','y','firecause','firediscoverydatetime','incidenttypecategory','containmentdatetime',\n",
     "                      'controldatetime','dailyacres','discoveryacres','incidenttypekind','initiallatitude','initiallongitude','rain_sum', 'fire_id_y',\n",
     "                     'irwinid','localincidentidentifier','poocounty','poodispatchcenterid','poofips','poostate','uniquefireidentifier','wind_speed_2m_mean',\t\n",
-    "                      'wind_speed_2m_max_mean','wind_speed_10m_mean','wind_speed_10m_max_mean','humidity_mean','temp_2m_mean'])"
+    "                      'wind_speed_2m_max_mean','wind_speed_10m_mean','wind_speed_10m_max_mean','humidity_mean','temp_2m_mean']\n",
+    "\n",
+    "master_dataset = data2.drop(columns = cols)"
    ]
   },
   {
@@ -102,8 +196,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Export of the final dataset to be used in modeling\n",
+    "# Export of the final, filtered dataset to be used in modeling\n",
     "master_dataset.to_csv('../../data/processed/master_dataset.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e6259a4-9800-427e-9ab0-61ece2da5cb7",
+   "metadata": {},
+   "source": [
+    "Master Dataset for All Fires"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e4a99a5a-cc02-4af5-aec8-30983c5aa782",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_1 = wildfires.merge(weather, left_on = 'fire_id', right_on = 'id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "43fb1031-f412-4560-bee9-92d10604d644",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_2 = data_1.merge(landcover, left_on = 'id', right_on = 'fire_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "c29cc3ae-a0a1-4f71-9565-f6769019223f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20276, 60)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "02da439b-5a1d-4903-8209-25914758860a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filtering out columns not participating in fire acreage prediction\n",
+    "master_dataset_allfires = data_2.drop(columns = cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "05a06f84-9ca6-4d83-b44a-6fb3a4045247",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setting id as index\n",
+    "master_dataset_allfires.set_index('id', inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "964a4c07-31b4-4d21-9e6a-faa0ba4f5212",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export of the final dataset for all fires to be used in modeling\n",
+    "master_dataset_allfires.to_csv('../../data/processed/master_dataset_allfires.csv', index=False)"
    ]
   }
  ],
@@ -123,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
