--- a/src/01_cleaning_eda/bt_eda.ipynb
+++ b/src/01_cleaning_eda/bt_eda.ipynb
@@ -37,11 +37,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# All Fire Dataset\n",
     "all_fire_weather = pd.read_csv(\n",
     "    Config.get_cleaned_fire_all_path(\"weather\"),\n",
     "    parse_dates=[\"firediscoverydatetime\", \"controldatetime\", \"containmentdatetime\"],\n",
     ")\n",
     "\n",
+    "# Fires (acres burned > 1 and lasted more than 1 day)\n",
     "big_fire_weather = pd.read_csv(\n",
     "    Config.get_cleaned_fire_filtered_path(\"weather_extra_180d\"),\n",
     "    parse_dates=[\"firediscoverydatetime\", \"controldatetime\", \"containmentdatetime\"],\n",
@@ -118,6 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Drop the columns not needed for eda\n",
     "cols_not_needed = [\n",
     "    \"id\",\n",
     "    \"x\",\n",
@@ -130,8 +133,8 @@
     "    \"poodispatchcenterid\",\n",
     "    \"uniquefireidentifier\",\n",
     "]\n",
-    "all_fire_weather.drop(columns=cols_not_needed, inplace=True)\n",
     "\n",
+    "all_fire_weather.drop(columns=cols_not_needed, inplace=True)\n",
     "big_fire_weather.drop(columns=cols_not_needed, inplace=True)\n"
    ]
   },
@@ -243,6 +246,7 @@
     }
    ],
    "source": [
+    "# Check how many date columns with datetime type\n",
     "all_fire_weather.select_dtypes(\"datetime64[ns, UTC]\").head(1)\n"
    ]
   },
@@ -302,6 +306,7 @@
     }
    ],
    "source": [
+    "# Check how many date columns with datetime type\n",
     "big_fire_weather.select_dtypes(\"datetime64[ns, UTC]\").head(1)\n"
    ]
   },
@@ -444,6 +449,7 @@
     }
    ],
    "source": [
+    "# Unpack datetime to year | month | day columns\n",
     "extract_dates(all_fire_weather)\n",
     "all_fire_weather.head(1)\n"
    ]
@@ -558,6 +564,7 @@
     }
    ],
    "source": [
+    "# Unpack datetime to year | month | day columns\n",
     "extract_dates(big_fire_weather)\n",
     "big_fire_weather.head(1)\n"
    ]
@@ -575,6 +582,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set min and max months fire\n",
     "peak_fire_month = {\n",
     "    'min': 5,\n",
     "    'max': 8\n",
