additional minor fixes in visuals

--- a/src/00_collect_data/meteorology_data_collection_api_POWER.ipynb
+++ b/src/00_collect_data/meteorology_data_collection_api_POWER.ipynb
@@ -198,7 +198,7 @@
    "outputs": [],
    "source": [
     "# Store weather data to folder\n",
-    "nasa_df.to_csv(Config.get_raw_meteorology_path(\"nasa_weather\"), index=False)"
+    "nasa_df.to_csv(Config().get_raw_meteorology_path(\"nasa_weather\"), index=False)"
    ]
   },
   {
@@ -446,7 +446,7 @@
    "outputs": [],
    "source": [
     "# Store weather for big fire\n",
-    "nasa_big_fire_df.to_csv(Config.get_raw_meteorology_path(\"nasa_weather_extra\"), index=False)"
+    "nasa_big_fire_df.to_csv(Config().get_raw_meteorology_path(\"nasa_weather_extra\"), index=False)"
    ]
   },
   {
@@ -493,7 +493,7 @@
    "source": [
     "# Store result into data folder\n",
     "nasa_last_180_prec_df.to_csv(\n",
-    "    Config.get_raw_meteorology_path(\"nasa_weather_last_180days\"), index=False\n",
+    "    Config().get_raw_meteorology_path(\"nasa_weather_last_180days\"), index=False\n",
     ")"
    ]
   }
@@ -514,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
