--- a/src/00_collect_data/meteorology_data_collection_api_meteostat.ipynb
+++ b/src/00_collect_data/meteorology_data_collection_api_meteostat.ipynb
@@ -336,7 +336,7 @@
    "outputs": [],
    "source": [
     "# Store result\n",
-    "meteo_res_df.to_csv(Config.get_raw_meteorology_path(\"meteo_weather\"), index=False)"
+    "meteo_res_df.to_csv(Config().get_raw_meteorology_path(\"meteo_weather\"), index=False)"
    ]
   }
  ],
@@ -356,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
