--- a/src/01_cleaning_eda/01.2_meteorology_cleaning.ipynb
+++ b/src/01_cleaning_eda/01.2_meteorology_cleaning.ipynb
@@ -35,9 +35,9 @@
    "source": [
     "# Reading data we collected with APIs\n",
     "# Load Meteo stat dataset\n",
-    "mdf = pd.read_csv(Config.get_raw_meteorology_path(\"meteostat_weather\"))\n",
+    "mdf = pd.read_csv(Config().get_raw_meteorology_path(\"meteostat_weather\"))\n",
     "# Load Nasa dataset\n",
-    "ndf = pd.read_csv(Config.get_raw_meteorology_path(\"nasa_weather\"))\n",
+    "ndf = pd.read_csv(Config().get_raw_meteorology_path(\"nasa_weather\"))\n",
     "\n",
     "# Load wildfire dataset\n",
     "fdf = pd.read_csv(\"../../data/processed/wildfire.csv\")\n"
@@ -879,7 +879,7 @@
    "source": [
     "# Store merged dataset that contains wildfire and weather\n",
     "merged_df.reset_index().to_csv(\n",
-    "    Config.get_cleaned_fire_all_path(\"weather\"), index=False\n",
+    "    Config().get_cleaned_fire_all_path(\"weather\"), index=False\n",
     ")\n"
    ]
   },
@@ -987,7 +987,7 @@
    ],
    "source": [
     "# Read in extra weather dataset for big fires (acres > 1 and loner than 1 day)\n",
-    "extra_weather = pd.read_csv(Config.get_raw_meteorology_path(\"nasa_weather_extra\"))\n",
+    "extra_weather = pd.read_csv(Config().get_raw_meteorology_path(\"nasa_weather_extra\"))\n",
     "extra_weather.head(1)\n"
    ]
   },
@@ -1349,7 +1349,7 @@
    "outputs": [],
    "source": [
     "# Store big fire with extra weather dataset\n",
-    "merged_df.reset_index().to_csv(Config.get_cleaned_fire_filtered_path(\"weather_extra\"), index=False)"
+    "merged_df.reset_index().to_csv(Config().get_cleaned_fire_filtered_path(\"weather_extra\"), index=False)"
    ]
   },
   {
@@ -1561,7 +1561,7 @@
    "source": [
     "# Load rain and snow for previous 6 months from wildfire start date\n",
     "prec_180d = pd.read_csv(\n",
-    "    Config.get_processed_meteorology_path(\"historical_rain_snow_sum_6mo\")\n",
+    "    Config().get_processed_meteorology_path(\"historical_rain_snow_sum_6mo\")\n",
     ")\n",
     "\n",
     "prec_180d.head(1)"
@@ -1863,7 +1863,7 @@
    "source": [
     "# Store wildfire dataset merged with 6 months rain and snow\n",
     "merged_df.reset_index().to_csv(\n",
-    "    Config.get_cleaned_fire_filtered_path(\"weather_extra_180d\"), index=False\n",
+    "    Config().get_cleaned_fire_filtered_path(\"weather_extra_180d\"), index=False\n",
     ")"
    ]
   }
@@ -1884,7 +1884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
