EDA, visuals, readme

--- a/src/01_cleaning_eda/01.1_wildfires_cleaning.ipynb
+++ b/src/01_cleaning_eda/01.1_wildfires_cleaning.ipynb
@@ -5,9 +5,7 @@
    "id": "6b97809a-7383-42a2-a2fa-af0e5e517242",
    "metadata": {},
    "source": [
-    "# Wildfires dataset cleaning\n",
-    "\n",
-    "WRITE THE CLEANING OVERVIEW HERE"
+    "# Wildfires dataset cleaning"
    ]
   },
   {
@@ -1094,7 +1092,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
